--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               class="flex flex-col items-center gap-5 flex-wrap justify-center md:flex-row md:gap-12 text-neutral-400 font-semibold text-2xl md:text-3xl"
             >
               <li class="flex gap-2 items-center">
-                <img src="/assets/unsplash.svg" alt="Unsplash" />Unsplash
+                <img src="assets/unsplash.svg" alt="Unsplash" />Unsplash
               </li>
               <li class="flex gap-2 items-center">
                 <img src="assets/notion.svg" alt="Notion" />Notion
@@ -585,26 +585,30 @@
               </p>
               <div class="flex gap-5">
                 <div class="rounded-full w-16 h-16">
-                  <img src="/assets/author1.png" alt="author1" />
+                  <img src="assets/author1.png" alt="author1" />
                 </div>
                 <div class="rounded-full w-16 h-16">
-                  <img src="/assets/author2.png" alt="author2" />
+                  <img src="assets/author2.png" alt="author2" />
                 </div>
                 <div class="rounded-full w-16 h-16">
-                  <img src="/assets/author3.png" alt="author3" />
+                  <img src="assets/author3.png" alt="author3" />
                 </div>
                 <div class="rounded-full w-16 h-16">
-                  <img src="/assets/author4.png" alt="author4" />
+                  <img src="assets/author4.png" alt="author4" />
                 </div>
                 <div class="rounded-full w-16 h-16">
-                  <img src="/assets/play-white.svg" alt="play" />
+                  <img src="assets/play-white.svg" alt="play" />
                 </div>
               </div>
             </div>
-            <div class="md:w-1/2 bg-gray-800 rounded-3xl pt-10 pb-[66px] px-20">
+            <div
+              class="md:w-1/2 bg-gray-800 rounded-3xl pt-5 md:pt-10 pb-8 md:pb-[66px] px-10 md:px-20"
+            >
               <div class="text-center">
                 <img src="assets/logo-euro.svg" class="mx-auto" alt="logo" />
-                <h3 class="font-medium text-3xl text-white mt-[10px]">
+                <h3
+                  class="font-medium text-2xl md:text-3xl text-white mt-[10px]"
+                >
                   Get Started
                 </h3>
               </div>
