--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
           </div>
         </section>
       </main>
-      <footer class="bg-gray-900 p-5 pt-16 md:pt-32">
+      <footer class="bg-gray-900 p-5 pt-16 md:pt-32 overflow-hidden">
         <div class="max-w-6xl mx-auto">
           <div class="md:flex md:justify-between mb-24 md:mb-44">
             <div class="mb-5 md:mb-0 md:w-2/5">
